--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
+{% load crispy_forms_tags %}
+
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
@@ -77,6 +79,23 @@
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
                 <!-- For later -->
+                {% if commented %}
+                <div class="alert alert-success" role="alert">
+                    Your comment is awaiting approval
+                </div>
+                {% else %}
+
+                {% if user.is_authenticated %}
+
+                <h3>Leave a Comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em">
+                    {{ comment_form | crispy }}
+                    {% csrf_token %}
+                </form>
+                {% endif %}
+                {% endif %}
+
             </div>
         </div>
     </div>
